cmake_minimum_required(VERSION 3.15)
project(OO-Huis)

set(CMAKE_CXX_STANDARD 14)

add_executable(OO-Huis main.cpp Bed.cpp Bed.h Huis.cpp Huis.h Kamer.cpp Kamer.h Kast.cpp Kast.h Kelder.cpp Kelder.h Keuken.cpp Keuken.h Meubel.cpp Meubel.h Slaapkamer.cpp Slaapkamer.h Stoel.cpp Stoel.h Woonkamer.cpp Woonkamer.h)