cmake_minimum_required(VERSION 3.15)
project(OO-Overerving_Bedrijf)

set(CMAKE_CXX_STANDARD 14)

add_executable(OO-Overerving_Bedrijf main.cpp Werknemer.cpp Werknemer.h Manager.cpp Manager.h Directeur.cpp Directeur.h Secretaresse.cpp Secretaresse.h Tijdelijk.cpp Tijdelijk.h TSec.cpp TSec.h Consultant.cpp Consultant.h)